fixed the dark mode

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -309,9 +309,6 @@ body,
   color: #6c757d !important;
 }
 
-.AQI {
-}
-
 /* ================================== media queries  ====================================*/
 /*================================ width 1350========================================== */
 
